--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ ul.task-list{list-style: none;}
 </section>
 <section id="online-predictor" class="level2">
 <h2 class="anchored" data-anchor-id="online-predictor">Online Predictor</h2>
-<p>The final models that I reached are deployed on Heroku <a href="https://dsi-weather-predictor.herokuapp.com">Visit</a> you can predict on binary classification or with 5-class classification. Check the confusion matrix</p>
+<p>The final models that I reached are deployed on Heroku <a href="https://web-production-df4e.up.railway.app/">TRY NOW</a> you can predict on binary classification or with 5-class classification. Check the confusion matrix</p>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
 <p><img src="pages/CNN_confusion_matrix.png" class="img-fluid figure-img"></p>
